Adjsut spacing and fix contact webpage so the form sends to success page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ nav {
 }
 
 section {
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
 }
 
 /* Remobe standart link color */
@@ -82,15 +82,11 @@ main {
   height: 100%;
   object-fit: cover;
   max-height: 60vh;
+  min-height: 30vh;
   display: block;
 }
 
-.hero-text {
-  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
-    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
-  padding: 1rem;
-  margin: 0;
-}
+
 
 /* https://getcssscan.com/css-box-shadow-examples?ref=beautifulbuttons-bottom add credit */
 #services-section .card {
